--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!--Logo Title-->
+    <link rel = "icon" href ="logo.png" type = "image/x-icon">
     <title>Travel-PH</title>
 </head>
 <body>
@@ -172,21 +174,21 @@
           <h4 align="center"><b>Bohol Chocolate Hills</b></h4>
           <hr>
           <div class="row">
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/bohol1.jpg" height="200px">
                     </div>
                   </div>
               </div>
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/bohol2.jpg" height="200px">
                     </div>
                   </div>
               </div>
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/boho3.jpg" height="200px">
@@ -214,21 +216,21 @@
           <h4 align="center"><b>Cebu Kawasan Falls</b></h4>
           <hr>
           <div class="row">
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/kawasan1.jpg" height="200px">
                     </div>
                   </div>
               </div>
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/kawasan2.jpg" height="200px">
                     </div>
                   </div>
               </div>
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/kawasan3.jpg" height="200px">
@@ -256,21 +258,21 @@
           <h4 align="center"><b>Bicol Mayon Volcano</b></h4>
           <hr>
           <div class="row">
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/mayon1.jpg" height="200px">
                     </div>
                   </div>
               </div>
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/mayon2.jpg" height="200px">
                     </div>
                   </div>
               </div>
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/mayon3.jpg" height="200px">
@@ -298,21 +300,21 @@
           <h4 align="center"><b>Coron Palawan Kayangan Lake</b></h4>
           <hr>
           <div class="row">
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/coron1.jpg" height="200px">
                     </div>
                   </div>
               </div>
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/coron2.png" height="200px">
                     </div>
                   </div>
               </div>
-              <div class="col s4">
+              <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img class="activator" src="img/coron3.jpg" height="200px">
@@ -342,21 +344,21 @@
         <h4 align="center"><b>Siargao Cloud 9</b></h4>
         <hr>
         <div class="row">
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/siargao1.jpg" height="200px">
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/siargao2.jpg" height="200px">
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/siargao3.jpg" height="200px">
@@ -386,21 +388,21 @@
         <h4 align="center"><b>Elnido Nacpan Beach</b></h4>
         <hr>
         <div class="row">
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/elnido1.jpg" height="200px">
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/elnido2.jpg" height="200px">
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/elnido3.jpg " height="200px">
@@ -426,21 +428,21 @@
         <h4 align="center"><b>Tagaytay Taal Volcano and Lake</b></h4>
         <hr>
         <div class="row">
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/taal1.jpg" height="200px">
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/taal2.jpg" height="200px">
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/taal3.jpg " height="200px">
@@ -468,21 +470,21 @@
         <h4 align="center"><b>Vigan Calle Crisologo</b></h4>
         <hr>
         <div class="row">
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/vigan1.jpg" height="200px">
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/vigan2.jpg" height="200px">
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/vigan3.jpg " height="200px">
